# conway

./: README.md  conway.cabal
app/: Main.hs
src/: Conway.hs
