name:                conway
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ChrisPenner/conway#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2017 Chris Penner
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Conway
  build-depends:       base >= 4.7 && < 5
                     , comonad
                     , adjunctions
                     , distributive
                     , vector
  default-language:    Haskell2010

executable conway-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5
                     , conway
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/conway
